# learnOpenGL

./: .gitignore  CMakeLists.txt  camera.h  fragment.glsl  glad.c  main.cpp  mesh.h  model.h  shader.h  stb.cpp  vertex.glsl
shaders/lightSource/: vertex.glsl
shaders/multiple-lights/: fragment.glsl  vertex.glsl
shaders/object/: fragment.glsl  vertex.glsl
